apps/app-admin/overlay/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-admin-ingress
  annotations:
    cert-manager.io/cluster-issuer: acme-issuer
spec:
  ingressClassName: traefik-external
  rules:
    - host: app-admin-dev.poc.mdplabs.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-admin
                port:
                  number: 5000
  tls:
    - hosts:
        - app-admin-dev.poc.mdplabs.dev
      secretName: app-admin-tls
